@@ -39,7 +39,7 @@ AC_REQUIRE([CL_MMAP])dnl
 AC_REQUIRE([CL_MPROTECT])dnl
 AC_REQUIRE([CL_SHM_H])dnl
 AC_REQUIRE([CL_SHM])dnl
-AC_REQUIRE([CL_CODEEXEC])dnl
+AC_REQUIRE([FFCALL_CODEEXEC])dnl
 ])
 
 AC_DEFUN([CL_CHECK],[dnl
